Doc/force-app/main/default/objects/Contract/fields/Exclude_from_Auto_Renewal_Override__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Auto_Renewal_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-73240 - Select this to exclude migrated contracts from auto-renewals.</description>
    <label>Exclude from Auto-Renewal Override</label>
    <type>Checkbox</type>
</CustomField>