Doc/force-app/main/default/objects/Contract/fields/First_Segment_Months__c.field-meta.xml
<CustomField>
    <fullName>First_Segment_Months__c</fullName>
    <description>&apos;First invoice period (number of months)</description>
    <label>First Segment Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>