Doc/force-app/main/default/objects/Contract/fields/GTM_Motion_Tier__c.field-meta.xml
<CustomField>
    <fullName>GTM_Motion_Tier__c</fullName>
    <description>Stores the picklist value of GTM_Motion_Tier__c from account</description>
    <formula>text(Account.GTM_Motion_Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GTM Motion Tier</label>
    <type>Text</type>
</CustomField>