Doc/force-app/main/default/objects/Contract/fields/Includes_multi_year_term_for_on_perm__c.field-meta.xml
<CustomField>
    <fullName>Includes_multi_year_term_for_on_perm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Includes multi-year term for the on-premises product(s) without a break clause?</description>
    <inlineHelpText>Does the OSA include a multi-year term for on-premises product(s)?</inlineHelpText>
    <label>Includes multi-year term for on-perm?</label>
    <type>Checkbox</type>
</CustomField>