Doc/force-app/main/default/objects/Contract/fields/Initial_Software_Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Initial_Software_Term_Length__c</fullName>
    <label>Initial Software Term Length (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>