Doc/force-app/main/default/objects/Contract/fields/Intapp_680__c.field-meta.xml
<CustomField>
    <fullName>Intapp_680__c</fullName>
    <formula>Account.Intapp_Master_Ranking__c</formula>
    <label>Intapp 680</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>