Doc/force-app/main/default/objects/Contract/fields/Invoicing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BIZ-50474</description>
    <label>Invoicing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Invoicing Contact)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>