Doc/force-app/main/default/objects/Contract/fields/Is_Migrated_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Migrated_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Migrated Contract</label>
    <type>Checkbox</type>
</CustomField>