Doc/force-app/main/default/objects/Contract/fields/Legacy_Quote_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Quote_Id__c</fullName>
    <description>Reference to previously linked SBQQ__Quote__c record.</description>
    <label>Legacy Quote Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>