Doc/force-app/main/default/objects/Contract/fields/Legacy_TermSheet_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_TermSheet_ID__c</fullName>
    <description>Created as part of BIZ-68794</description>
    <label>Legacy TermSheet ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>