Doc/force-app/main/default/objects/Contract/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <description>Built according to BIZ-47359</description>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intapp</fullName>
            </value>
            <value>
                <fullName>DealCloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>