Doc/force-app/main/default/objects/Contract/fields/Manual_OSA__c.field-meta.xml
<CustomField>
    <fullName>Manual_OSA__c</fullName>
    <formula>SBQQ__Order__r.SBQQ__Quote__r.Manual_OSA__c</formula>
    <label>Manual_OSA</label>
    <type>Checkbox</type>
</CustomField>