Doc/force-app/main/default/objects/Contract/fields/Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>Migration_Status__c</fullName>
    <label>Migration Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>In Processing</fullName>
            </value>
            <value>
                <fullName>Migrated</fullName>
            </value>
            <value>
                <fullName>Renewal Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>