Doc/force-app/main/default/objects/Contract/fields/Non_standard_Cloud_Data_Location_Detail__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Cloud_Data_Location_Detail__c</fullName>
    <label>Non-standard Cloud Data Location Detail</label>
    <type>TextArea</type>
</CustomField>