Doc/force-app/main/default/objects/Contract/fields/Non_Standard_Cloud_Location__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Cloud_Location__c</fullName>
    <inlineHelpText>Indicates a non-standard cloud location specific to this OSA only.  Do not select a value if the location is standard.</inlineHelpText>
    <label>Non-Standard Cloud Location - this deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>