Doc/force-app/main/default/objects/Contract/fields/OP4I_Auto_Number_Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Auto_Number_Deal_ID__c</fullName>
    <description>BIZ-62901 same as Order OP4I Deal ID (OP4I_Auto_Number_Deal_ID__c)</description>
    <formula>SBQQ__Quote__r.OP4I_Auto_Number_Deal_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP4I Deal ID</label>
    <type>Text</type>
</CustomField>