Doc/force-app/main/default/objects/Contract/fields/OP4I_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Contract_Id__c</fullName>
    <label>OP4I Contract Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>