Doc/force-app/main/default/objects/Contract/fields/OP4I_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Contract_Number__c</fullName>
    <description>OP4I Contract Number mapped from quote::BIZ-50998</description>
    <formula>IF(
  NOT(ISBLANK(SBQQ__Quote__r.Override_OP4I_ContractNumber__c)),
  SBQQ__Quote__r.Override_OP4I_ContractNumber__c,
  SBQQ__Quote__r.OP4I_Contract_Number__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP4I Contract Number</label>
    <type>Text</type>
</CustomField>