Doc/force-app/main/default/objects/Contract/fields/OP4I_Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_ID__c</fullName>
    <description>Custom field made to populate the Deal Id on contract record from op4i.
Built according to US # BIZ-46098</description>
    <label>OnePlace ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>