Doc/force-app/main/default/objects/Contract/fields/OP4I_Deal_Owner__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_Owner__c</fullName>
    <label>OP4I Deal Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>