Doc/force-app/main/default/objects/Contract/fields/OP4I_Deal_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_Owner_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be auto populated from Opportunity&apos;s Account Owner for Oppty originated from Salesforce. For Oppty originated from OP4I, OP4I will provide Salesforce User Id to Salesforce.</description>
    <label>OP4I Deal Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contract_OP4I_Deal_Owner_Id</relationshipName>
    <type>Lookup</type>
</CustomField>