Doc/force-app/main/default/objects/Contract/fields/OP4I_Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Sales_Segment__c</fullName>
    <description>Quote mapping twin field  BIZ-49780</description>
    <formula>SBQQ__Quote__r.OP4I_Sales_Segment__c</formula>
    <label>OP4I Sales Segment</label>
    <type>Text</type>
</CustomField>