Doc/force-app/main/default/objects/Contract/fields/Original_SFA_Value__c.field-meta.xml
<CustomField>
    <fullName>Original_SFA_Value__c</fullName>
    <description>Created as part of BIZ-68171.</description>
    <label>Original SFA Value</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>