Doc/force-app/main/default/objects/Contract/fields/OSA_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>OSA_Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OSA Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (OSA Customer Name)</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>