Doc/force-app/main/default/objects/Contract/fields/OSA_Number__c.field-meta.xml
<CustomField>
    <fullName>OSA_Number__c</fullName>
    <description>This field will populate the value from OSA Number field on Quote. Created as part of BIZ-47720.</description>
    <label>OSA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>