Doc/force-app/main/default/objects/Contract/fields/Parent_OSA__c.field-meta.xml
<CustomField>
    <fullName>Parent_OSA__c</fullName>
    <description>Created as part of BIZ-73453.</description>
    <label>Parent OSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>