Doc/force-app/main/default/objects/Contract/fields/Payment_Processor__c.field-meta.xml
<CustomField>
    <fullName>Payment_Processor__c</fullName>
    <label>Payment Processor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>