Doc/force-app/main/default/objects/Contract/fields/Payment_Terms_Override__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Override__c</fullName>
    <description>BIZ-47308</description>
    <label>Payment Terms Override</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>