Doc/force-app/main/default/objects/Contract/fields/Payment_Terms_Services__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Services__c</fullName>
    <label>Payment Terms: Services</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30% retainer &amp; standard T&amp;M thereafter</fullName>
            </value>
            <value>
                <fullName>Less than 30% retainer &amp; standard T&amp;M thereafter</fullName>
            </value>
            <value>
                <fullName>Standard - 50% Retainer &amp; standard T&amp;M thereafter</fullName>
            </value>
            <value>
                <fullName>Standard – T&amp;M</fullName>
            </value>
            <value>
                <fullName>Milestones</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>