Doc/force-app/main/default/objects/Contract/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <inlineHelpText>Purchase Order Number</inlineHelpText>
    <label>#PO Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>