Doc/force-app/main/default/objects/Contract/fields/Price_book_exception__c.field-meta.xml
<CustomField>
    <fullName>Price_book_exception__c</fullName>
    <label>Price book exception</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Outside price book</fullName>
            </value>
            <value>
                <fullName>Future product development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>