Doc/force-app/main/default/objects/Contract/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity Created</fullName>
            </value>
            <value>
                <fullName>Quote Created</fullName>
            </value>
            <value>
                <fullName>Parent Quote Line Created</fullName>
            </value>
            <value>
                <fullName>Order and OLI created</fullName>
            </value>
            <value>
                <fullName>Contract Created</fullName>
            </value>
            <value>
                <fullName>Contract Activated</fullName>
            </value>
            <value>
                <fullName>Child Quote Line Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>