Doc/force-app/main/default/objects/Contract/fields/Proposal__c.field-meta.xml
<CustomField>
    <fullName>Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This links the contract to the appropriate proposal</description>
    <label>Proposal</label>
    <referenceTo>Proposal__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>R00N50000001Qc4vEAC</relationshipName>
    <type>Lookup</type>
</CustomField>