Doc/force-app/main/default/objects/Contract/fields/Recipient_s_Title__c.field-meta.xml
<CustomField>
    <fullName>Recipient_s_Title__c</fullName>
    <description>Title of the person receiving the contract.</description>
    <label>Recipient&apos;s Title</label>
    <length>40</length>
    <type>Text</type>
</CustomField>