Doc/force-app/main/default/objects/Contract/fields/Recipient_Title__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Title__c</fullName>
    <formula>Recipient__r.Title</formula>
    <label>Recipient Title</label>
    <type>Text</type>
</CustomField>