Doc/force-app/main/default/objects/Contract/fields/Reference_Program__c.field-meta.xml
<CustomField>
    <fullName>Reference_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Program?</label>
    <type>Checkbox</type>
</CustomField>