Doc/force-app/main/default/objects/Contract/fields/Renewal_Pause_Reason__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Pause_Reason__c</fullName>
    <description>Note by renewal team when renewal is paused https://intapp.atlassian.net/browse/BIZ-67993</description>
    <label>Renewals Pause Reason [DO NOT USE]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>