Doc/force-app/main/default/objects/Contract/fields/Renewals_Pause__c.field-meta.xml
<CustomField>
    <fullName>Renewals_Pause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field pauses the auto-renewals and automatic generation of renewal letters. Created as part of BIZ-66329</description>
    <label>Renewals Pause [DO NOT USE]</label>
    <type>Checkbox</type>
</CustomField>