Doc/force-app/main/default/objects/Contract/fields/Retainer__c.field-meta.xml
<CustomField>
    <fullName>Retainer__c</fullName>
    <label>Retainer %</label>
    <length>20</length>
    <type>Text</type>
</CustomField>