Doc/force-app/main/default/objects/Contract/fields/Right_of_Return__c.field-meta.xml
<CustomField>
    <fullName>Right_of_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To track if a contract has Right of Return language</description>
    <inlineHelpText>Does this contract contain Right of Return language?</inlineHelpText>
    <label>Right of Return</label>
    <type>Checkbox</type>
</CustomField>