Doc/force-app/main/default/objects/Contract/fields/ROR_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ROR_Expiration_Date__c</fullName>
    <description>Keeps track of the date that a Customer can exercise the Right of Return until.</description>
    <inlineHelpText>Tracks the date that a Customer can exercise the Right of Return until.</inlineHelpText>
    <label>ROR Expiration Date</label>
    <type>Date</type>
</CustomField>